[gd_scene load_steps=2 format=3 uid="uid://dnbbk0buhld8m"]

[ext_resource type="Script" uid="uid://dnwc0nm5j3fw6" path="res://scenes/base_enemy/base_enemy.gd" id="1_ho067"]

[node name="BaseEnemy" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_ho067")
mov_speed = 5000

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="PatrolTimer" type="Timer" parent="."]

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
